--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -21,6 +21,7 @@
                 <p class="card-text text-muted">Acesse a localização dos navios em tempo real.</p>
                 <a href="{% url 'mapa' %}" class="btn btn-primary">Ver Mapa</a>
             </div>
+        </div>
         <div class="card text-center shadow-lg">
             <div class="card-body">
                 <i class="fa-solid fa-qrcode fa-3x text-success mb-3"></i>
